Commit before trying to introduce generics to mappers.